--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Shrinivas's repositories</title>
 <body>
-	<a href="https://github.com/shrinivas93" target="_new">Shrinivas's repositories</a>
+	<a href="https://github.com/shrinivas93?tab=repositories" target="_new">Shrinivas's repositories</a>
 </body>
 </html>
