--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>Shrinivas's repositories</title>
+<title>Shrinivas Shukla's repositories</title>
 <body>
 	<a href="https://github.com/shrinivas93?tab=repositories" target="_new">Shrinivas's repositories</a>
 </body>
